# openhound-workshop

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml  skills-lock.json
.agents/skills/openhound/: SKILL.md
.agents/skills/openhound/references/: add-asset.md  graph-schema.md  plan-collector.md  preproc-lookup.md  register-extension.md  source-collection.md  validate-extension.md
.agents/standards/: openhound.md  workflow.md
notebooks/: 01-introduction.py  02-pydantic.py  03-dlt.py  04-openhound.py  05-opengraph-conversion.py  06-agents.py  pipeline.py
notebooks/section-04/: pokemon_types.py
notebooks/section-05/: pokeapi.md
notebooks/section-05/pokemon/: README.md  extension.yaml  pyproject.toml
notebooks/section-05/pokemon/src/openhound_pokemon/: __init__.py  main.py  transforms.py
notebooks/section-05/pokemon/src/openhound_pokemon/kinds/: __init__.py
notebooks/section-05/pokemon/src/openhound_pokemon/models/: __init__.py  common.py  environment.py  pokemon.py
notebooks/section-06/pokemon/src/openhound_pokemon/: graph.py  lookup.py  main.py  source.py
notebooks/section-06/pokemon/src/openhound_pokemon/kinds/: edges.py  nodes.py
notebooks/section-06/pokemon/src/openhound_pokemon/models/: pokemon.py
