[project]
name = "openhound-workshop"
version = "0.0.1"
description = "OpenHound, DLT and Pydantic workshop"
readme = "README.md"
requires-python = "<=3.14,>=3.13"
authors = [
  {name = "Joey Dreijer"}
]
dependencies = [
    "dlt>=1.26.0",
    "duckdb>=1.5.2",
    "marimo[sandbox]>=0.23.6",
    "openhound>=0.1.4",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
]


[tool.marimo.completion]
activate_on_typing = true

[tool.marimo.experimental]
external_agents = true

[tool.marimo.language_servers.pylsp]
enable_ruff = true
enable_pyflakes = false
enable_flake8 = false
enable_mypy = true
enabled = false
enable_pylint = false
enable_pydocstyle = false
