[project]
name = "openhound-pokemon"
version = "0.1.0"
description = "OpenHound Pokemon collector workshop extension"
requires-python = ">=3.13,<3.15"
dependencies = [
    "dlt>=1.26.0",
    "duckdb>=1.5.2",
    "openhound>=0.1.4",
    "pydantic>=2.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."openhound.sources"]
pokemon = "openhound_pokemon.main:app"
